# domotica

./: .gitignore  CMakeLists.txt  README.md  dockDockBuildParams.json
0_archive/sockets/: server_socket.cpp
Archief/sockets/: Socket_server.cpp  Socket_server.h  Socket_threading.cpp  Socket_threading.h  main.cpp
Arduino/: door.ino
Arduino/Column/: Column.ino
Arduino/Wall/: Wall.ino
Arduino/bed/: bed.ino
Arduino/chair/: chair.ino
Arduino/door/: door.ino
Arduino/fridge/: fridge.ino
Arduino/light/: light.ino
ClassStructure/: Bed.h  CMakeLists.txt  Chair.cpp  Chair.h  Component.cpp  Component.h  Door.cpp  Door.h  Fridge.cpp  Fridge.h  TableLamp.cpp  TableLamp.h  Wall.cpp  Wall.h  WithLed.cpp  WithLed.h  main.cpp
Client_socket/: Client_socket.ino
Config_files_for_hotspot_RPi/: README.txt  dhcpcd.conf  dnsmasq.conf  hostapd.conf  rules.v4
laravelServer/server/: .env.example  composer.json
socket/: Json_conversion.cpp  Json_conversion.h  Socket.cpp  Socket.h  Socket_server.cpp  Socket_server.h  id  main.cpp  makefile  server
socket/Components/: Bed.cpp  Bed.h  Chair.h  Door.cpp  Door.h  Fridge.cpp  Fridge.h  TableLamp.cpp  TableLamp.h  Wall.cpp  Wall.h
sockets/: Chair.cpp  Chair.h  Fridge.h  Json_conversion.cpp  Json_conversion.h  Main.h  Socket_server.cpp  Socket_server.h  Socket_threading.cpp  Socket_threading.h  Wall.h  client_socket.cpp  findLocalIp.cpp  findLocalIp.h  http_server.cpp  main.cpp  main_thread_without_OOP.cpp  makefile  server_socket.cpp
sockets/Archive/: BACKUP.txt  findLocalIp.cpp  findLocalIp.h
sockets/Components/: Bed.h  (+9 more)
(+504 files in other folders)
